# mesh2step

./: .dockerignore  .gitattributes  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: docker.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: CURVED_FEATURES.md  M5_HELICAL_PATTERNED.md  ORGANIC_CONVERSION_RESEARCH.md  VIEWER.md  WEBAPP.md
examples/: README.md
packaging/: README.md  app.py  build_mac.sh  mesh2step.spec
scripts/: generate_samples.py  smoke_boolean.py  smoke_convert.py
src/mesh2step/: __init__.py  analysis.py  boolean_runner.py  boundary.py  builder.py  catmull_clark.py  cli.py  config.py  embedded_viewer.py  failstore.py  fitting.py  freecad_env.py  gui.py  mesh_io.py  meshprep.py  meshprep_runner.py  organic.py  organic_region.py  pipeline.py  preview_render.py  provision.py  quadremesh.py  quadremesh_runner.py  segmentation.py  viewer.py  worker.py
src/mesh2step/webapp/: __init__.py  __main__.py  app.py  config.py  conversion.py  jobs.py  meshdata.py  server.py  stepmesh.py
src/mesh2step/webapp/static/: app.js  index.html  style.css  viewer.js
tests/: conftest.py  test_analysis.py  test_artifact_guards.py  test_builder_guards.py  test_builder_planar.py  test_cancellation.py  test_collapse_guards.py  test_fitting.py  test_freeform.py  test_helical.py  test_mesh_io.py  test_meshprep_census.py  test_meshprep_determinism.py  test_multibody_mode.py  test_organic.py  test_organic_region.py  test_pipeline_gate.py  test_provision.py  test_segmentation.py  test_sphere_budget_and_tols.py  test_spheres.py  test_swept.py  test_webapp.py
tests/data/: angled_hole_plate.stl  countersink_plate.stl  cylinder.stl  domed_plate.stl  fillet_chamfer_plate.stl  flanged_pipe.stl  freeform_bump.stl  hex_and_round_plate.stl  knurled_band.stl  l_bracket.stl  plate_with_holes.stl  samples.json  spur_gear.stl  swept_wavy_wall.stl  threaded_rod.stl
tests/data/real/: README.md
