[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh2step"
version = "0.2.0a2"
description = "Convert STL meshes to STEP solids with surface reconstruction (coplanar-facet merging) via FreeCAD."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nick Polanosky" }]
requires-python = ">=3.9"
keywords = ["stl", "step", "freecad", "cad", "mesh", "reverse-engineering", "opencascade"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
# numpy drives the segmentation core. FreeCAD is NOT a pip dependency — it is
# provided by a system FreeCAD install and located at runtime (see freecad_env).
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
gui = ["tkinterdnd2>=0.4"]          # optional drag-and-drop in the GUI
build = ["pyinstaller>=6"]          # to produce the standalone executable
viewer = ["pyvista>=0.43"]          # STL/STEP overlay + deviation heatmap
# Planar-preserving decimation (shrinks files, enables watertight boolean).
# Install into *FreeCAD's* Python (that's where the conversion worker runs):
#   & "C:/Program Files/FreeCAD 1.1/bin/python.exe" -m pip install pymeshlab
prep = ["pymeshlab>=2023.12"]

[project.urls]
Homepage = "https://github.com/npolanosky/mesh2step"
Issues = "https://github.com/npolanosky/mesh2step/issues"

[project.scripts]
mesh2step = "mesh2step.cli:main"
mesh2step-view = "mesh2step.viewer:main"

[project.gui-scripts]
mesh2step-gui = "mesh2step.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
