[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh2step"
version = "0.5.0a1"
description = "Convert STL meshes to STEP solids with surface reconstruction (coplanar-facet merging) via FreeCAD."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nick Polanosky" }]
requires-python = ">=3.9"
keywords = ["stl", "step", "freecad", "cad", "mesh", "reverse-engineering", "opencascade"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
# numpy drives the segmentation core. FreeCAD is NOT a pip dependency — it is
# provided by a system FreeCAD install and located at runtime (see freecad_env).
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
gui = ["tkinterdnd2>=0.4"]          # optional drag-and-drop in the GUI
build = ["pyinstaller>=6"]          # to produce the standalone executable
viewer = ["pyvista>=0.43"]          # STL/STEP overlay + deviation heatmap
# Mesh preparation: planar-preserving decimation (shrinks files, enables the
# watertight boolean) and manifold3d (resolves self-intersecting/overlapping-
# body meshes into one clean solid via winding-number boolean union).
# Install into *FreeCAD's* Python (that's where the conversion worker runs):
#   & "C:/Program Files/FreeCAD 1.1/bin/python.exe" -m pip install pymeshlab manifold3d
prep = ["pymeshlab>=2023.12", "manifold3d>=3.0"]
# Local web app (mesh2step-web): FastAPI + uvicorn. The web process itself never
# imports FreeCAD — it drives the same worker subprocess the GUI does. three.js
# is vendored into the package (webapp/static/vendor), so there is no npm/JS
# build step: `pip install ".[web]"` then `mesh2step-web` is all that's needed.
web = ["fastapi>=0.110", "uvicorn>=0.23", "python-multipart>=0.0.9"]

[project.urls]
Homepage = "https://github.com/npolanosky/mesh2step"
Issues = "https://github.com/npolanosky/mesh2step/issues"

[project.scripts]
mesh2step = "mesh2step.cli:main"
mesh2step-view = "mesh2step.viewer:main"
mesh2step-web = "mesh2step.webapp.server:main"

[project.gui-scripts]
mesh2step-gui = "mesh2step.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the web UI assets (HTML/CSS/JS + vendored three.js) inside the wheel so
# `pip install ".[web]"` gives a fully self-contained, offline app.
[tool.setuptools.package-data]
"mesh2step.webapp" = ["static/*", "static/vendor/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
